--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Family Recipes</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
+
+    <h2>I'm extending the base template.</h2>
+
     {% for recipe in recipes %}
         {{ recipe.recipe_name }}<br>
         {{ recipe.category_name }}<br>
@@ -14,5 +10,5 @@
         {{ recipe.recipe_method }}<br>
         {{ recipe.is_gluten_free }}<br>
     {% endfor %}
-</body>
-</html>
+
+{% endblock %}
