Add registratiom template and form.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,5 +21,29 @@ i {
     color: black;
 }
 
+.center-align {
+    font-family: 'Pacifico', cursive;
+}
+
+.parallax-container {
+    min-height: 380px;
+    line-height: 0;
+    height: auto;
+    color: black;
+    font-family: 'Pacifico', cursive;
+  }
+
+.parallax-container .section {
+      width: 100%;
+}
+  
+@media only screen and (max-width : 992px) {
+.parallax-container .section {
+    position: absolute;
+    top: 40%;
+}
+
+
+
 
 
