--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                     <li><a href="#">New recipe</a></li>
                     <li><a href="#">Log In</a></li>
                     <li><a href="#">Log Out</a></li>
-                    <li><a href="#">Register</a></li>
+                    <li><a href="{{ url_for('register') }}">Register</a></li>
                     
                     
                 </ul>
@@ -47,10 +47,14 @@
                 <li><a href="#">New recipe</a></li>
                 <li><a href="#">Log In</a></li>
                 <li><a href="#">Log Out</a></li>
-                <li><a href="#">Register</a></li>
+                <li><a href="{{ url_for('register') }}">Register</a></li>
                     
         </ul>
     </header>
+
+    
+
+      
 
 
     {% block content %}
@@ -66,3 +70,4 @@
 </body>
 
 </html>
+
