--- a/templates/base.html
+++ b/templates/base.html
@@ -52,6 +52,18 @@
         </ul>
     </header>
 
+<section>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+            <div class="row flashes">
+                <h4 class="red darken-4 center-align">{{ message }}</h4>
+            </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+</section>
+
     
 
       
