--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
                     <li><a href="{{ url_for('get_recipes') }}">Home</a></li>
                     <li><a href="#">My Recipes</a></li>
                     <li><a href="#">New recipe</a></li>
-                    <li><a href="#">Log In</a></li>
+                    <li><a href="{{ url_for('login') }}">Log In</a></li>
                     <li><a href="#">Log Out</a></li>
                     <li><a href="{{ url_for('register') }}">Register</a></li>
                     
@@ -45,7 +45,7 @@
                 <li><a href="{{ url_for('get_recipes') }}">Home</a></li>
                 <li><a href="#">My Recipes</a></li>
                 <li><a href="#">New recipe</a></li>
-                <li><a href="#">Log In</a></li>
+                <li><a href="{{ url_for('login') }}">Log In</a></li>
                 <li><a href="#">Log Out</a></li>
                 <li><a href="{{ url_for('register') }}">Register</a></li>
                     
@@ -66,11 +66,39 @@
 
     
 
-      
+  
 
 
     {% block content %}
     {% endblock %}
+
+    <footer class="page-footer teal">
+        <div class="container">
+          <div class="row">
+            <div class="col l6 s12">
+              <h5 class="white-text">Family Recipes</h5>
+              <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+    
+    
+        </div>
+            
+        <div class="col l3 s12">
+              <h5 class="white-text right-align">Social</h5>
+              <ul class="right-align">
+                <li><a class="white-text right" href="#!">Link 1</a></li>
+                <li><a class="white-text right" href="#!">Link 2</a></li>
+                <li><a class="white-text right" href="#!">Link 3</a></li>
+                <li><a class="white-text right" href="#!">Link 4</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="footer-copyright">
+          <div class="container">
+          Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+          </div>
+        </div>
+      </footer>  
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
