--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="center-align black-text text-darken-2">Register</h3>
+    <h3 class="center-align black-text">Log In</h3>
 
     <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
+        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
             <div class="card-panel">
                 <!-- username -->
                 <div class="row">
 					<div class="input-field col s12">
-						<i class="fas fa-user-plus prefix teal-text"></i>
+						<i class="fas fa-user-cog prefix teal-text"></i>
 						<input id="username" name="username" type="text" class="validate" 
                             minlength="5" maxlength="20" pattern="^[a-zA-Z0-9]{5,15}$" required>
 						<label for="username">Username</label>
@@ -26,8 +26,8 @@
                 </div>
                 <!-- register -->
                 <div class="row">
-                    <button type="submit" class="btn waves-effect waves-light col s12 btn-large teal lighten- 2 text-shadow">
-                        Register <i class="fas fa-sign-in-alt"></i>
+                    <button type="submit" class="btn waves-effect waves-light col s12 btn-large teal text-shadow">
+                        Log in <i class="fas fa-sign-in-alt"></i>
                     </button>
                 </div>
             </div>
@@ -36,7 +36,7 @@
 
     <div class="row">
         <div class="col s12">
-            <h5 class="center-align">Already registered? <a href="{{ url_for('login') }}" class="teal-text">Log In</a></h5>
+            <h5 class="center-align">New here? <a href="{{ url_for('register') }}" class="teal-text">Register</a></h5>
         </div>
     </div>
 
