--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -9,4 +9,22 @@
         {{ recipe.is_gluten_free }}<br>
     {% endfor %}
 
+    <div id="index-banner" class="parallax-container">
+        <div class="section no-pad-bot">
+          <div class="container">
+            <br><br>
+            <h1 class="header center black-text text-lighten-2">Family Recipes</h1>
+            <div class="row center">
+              <h5 class="header col s12 light">A place to save those important family recipes. Your recipes can be catalogued and saved for the future, making sure Mamma's chicken soup and grandpa's roast spuds is never lost again.</h5>
+            </div>
+            <div class="row center">
+              <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Register</a>
+            </div>
+            <br><br>
+    
+          </div>
+        </div>
+        <div class="parallax"><img src="static/images/heroimage.png" alt="illustrated image of people with cooking utensils" style="transform: translate3d(-50%, 199.705px, 0px); opacity: 1;"></div>
+    </div>
+
 {% endblock %}
