--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
                     <li><a href="#">My Recipes</a></li>
                     <li><a href="#">New recipe</a></li>
                     <li><a href="{{ url_for('login') }}">Log In</a></li>
+                    <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="#">Log Out</a></li>
                     <li><a href="{{ url_for('register') }}">Register</a></li>
                     
@@ -45,6 +46,7 @@
                 <li><a href="{{ url_for('get_recipes') }}">Home</a></li>
                 <li><a href="#">My Recipes</a></li>
                 <li><a href="#">New recipe</a></li>
+                <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                 <li><a href="{{ url_for('login') }}">Log In</a></li>
                 <li><a href="#">Log Out</a></li>
                 <li><a href="{{ url_for('register') }}">Register</a></li>
