--- a/templates/base.html
+++ b/templates/base.html
@@ -21,38 +21,40 @@
     <header>
 
     <!--Main Navbar-->
-        <nav class="nav-extended">
-            <div class="nav-wrapper white">
-                <a href="{{ url_for('get_recipes') }}" class="brand-logo">Family recipes</a>
-                <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="{{ url_for('get_recipes') }}">Home</a></li>
-                    <li><a href="#">My Recipes</a></li>
-                    <li><a href="#">New recipe</a></li>
-                    <li><a href="{{ url_for('login') }}">Log In</a></li>
-                    <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                    <li><a href="#">Log Out</a></li>
-                    <li><a href="{{ url_for('register') }}">Register</a></li>
-                    
-                    
-                </ul>
-            </div>
-        </nav>
-
-    <!--Mobile navbar-->
-
-        <ul class="sidenav" id="mobile-demo">
-            <li><h4 class="center-align">Family Recipes</h4></li>
+    <nav class="nav-extended white">
+        <div class="nav-wrapper">
+            <a href="{{ url_for('get_recipes') }}" class="brand-logo">Family Recipes</a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+            <ul class="right hide-on-med-and-down">
                 <li><a href="{{ url_for('get_recipes') }}">Home</a></li>
-                <li><a href="#">My Recipes</a></li>
-                <li><a href="#">New recipe</a></li>
-                <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                <li><a href="{{ url_for('login') }}">Log In</a></li>
-                <li><a href="#">Log Out</a></li>
-                <li><a href="{{ url_for('register') }}">Register</a></li>
-                    
-        </ul>
-    </header>
+                {% if session.user %}
+                    <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                    <li><a href="#">Add Recipe</a></li>
+                    <li><a href="#">Edit Recipe</a></li>
+                    <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+                {% else %}
+                    <li><a href="{{ url_for('login') }}">Log In</a></li>
+                    <li><a href="{{ url_for('register') }}">Register</a></li>
+                {% endif %}
+            </ul>
+        </div>
+    </nav>
+
+    <!-- mobile sidenav -->
+    <ul class="sidenav" id="mobile-demo">
+        <li><h4 class="center-align light-blue-text text-darken 4">Task Manager</h4></li>
+        <li><a href="{{ url_for('get_recipes') }}">Home</a></li>
+        {% if session.user %}
+            <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+            <li><a href="#">Add Recipe</a></li>
+            <li><a href="#">Edit Recipe</a></li>
+            <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+        {% else %}
+            <li><a href="{{ url_for('login') }}">Log In</a></li>
+            <li><a href="{{ url_for('register') }}">Register</a></li>
+        {% endif %}
+    </ul>
+</header>
 
 <section>
     {% with messages = get_flashed_messages() %}
