add card to recipe page.

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -27,4 +27,24 @@
         <div class="parallax"><img src="static/images/heroimage.png" alt="illustrated image of people with cooking utensils" style="transform: translate3d(-50%, 199.705px, 0px); opacity: 1;"></div>
     </div>
 
+    <h3 class="center-align black-text">Recipes</h3>
+    
+    <div class="row">
+      <div class="col s12 m8 offset-m2">
+        <div class="card">
+          <div class="card-image">
+            <img src="images/scones.jpg">
+            <span class="card-title">Card Title</span>
+          </div>
+          <div class="card-content">
+            <p>I am a very simple card. I am good at containing small bits of information.
+            I am convenient because I require little markup to use effectively.</p>
+          </div>
+          <div class="card-action">
+    
+          </div>
+        </div>
+      </div>
+    </div>
+
 {% endblock %}
