--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,21 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 
-    {% for recipe in recipes %}
-        {{ recipe.recipe_name }}<br>
-        {{ recipe.category_name }}<br>
-        {{ recipe.recipe_ingredients }}<br>
-        {{ recipe.recipe_method }}<br>
-        {{ recipe.is_gluten_free }}<br>
-    {% endfor %}
 
     <div id="index-banner" class="parallax-container">
         <div class="section no-pad-bot">
           <div class="container">
             <br><br>
-            <h1 class="header center black-text text-lighten-2">Family Recipes</h1>
+            <h1 class="header center teal-text text-lighten-2">Family Recipes</h1>
             <div class="row center">
-              <h5 class="header col s12 light">A place to save those important family recipes. Your recipes can be catalogued and saved for the future, making sure Mamma's chicken soup and grandpa's roast spuds is never lost again.</h5>
+              <h5 class="header col s12 light teal">A place to save those important family recipes. Your recipes can be catalogued and saved for the future, making sure Mamma's chicken soup and grandpa's roast spuds is never lost again.</h5>
             </div>
             <div class="row center">
               <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Register</a>
@@ -30,8 +23,10 @@
     <h3 class="center-align black-text">Recipes</h3>
     
     <div class="row">
+      
       <div class="col s12 m8 offset-m2">
         <div class="card">
+          {% for recipe in recipes %}
           <div class="card-image">
             <img src="images/scones.jpg">
             <span class="card-title">Card Title</span>
@@ -43,7 +38,9 @@
           <div class="card-action">
     
           </div>
+          {% endfor %}
         </div>
+        
       </div>
     </div>
 
