--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -31,9 +31,11 @@
             <img src="images/scones.jpg">
             <span class="card-title">Card Title</span>
           </div>
-          <div class="card-content">
-            <p>I am a very simple card. I am good at containing small bits of information.
-            I am convenient because I require little markup to use effectively.</p>
+          <div class="card-content center-align">
+            <h5>{{ recipe.recipe_name }}</h5>
+            <p>{{ recipe.category_name }}</p>
+            <p>Ingredients:<i class="fas fa-mortar-pestle"></i> {{ recipe.recipe_ingredients }}</p>
+            <p>Method <i class="fas fa-clipboard-list">:</i>{{ recipe.recipe_method }}</p>
           </div>
           <div class="card-action">
     
