--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -4,24 +4,46 @@
 <h3 class="center-align black-text">Add Recipe</h3>
 
 <div class="row">
-    <form class="col s12">
+    <form class="col s12" method="POST" action="">
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-file-signature prefix"></i>
-                <input id="icon_prefix" type="text" class="validate">
-                <label for="icon_prefix">Recipe Name:</label>
-            </div>
-            <div class="input-field col s12">
-                <i class="fas fa-clipboard-list prefix"></i>
-                <input id="icon_telephone" type="tel" class="validate">
-                <label for="icon_telephone">Ingredients:</label>
-            </div>
-            <div class="input-field col s12">
-                <i class="fas fa-mortar-pestle prefix"></i>
-                <input id="icon_telephone" type="tel" class="validate">
-                <label for="icon_telephone">Method:</label>
+                <input id="recipe_name" name="recipe_name" type="text" class="validate" 
+                    minlength="5" maxlength="50" required>
+                <label for="recipe_name">Recipe Name:</label>
             </div>
         </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="fas fa-clipboard-list prefix"></i>
+                <textarea id="recipe_ingredients" name="recipe_ingredients minlength="5"
+                        maxlength="500" class="materialize-textarea validate" required></textarea>
+                <label for="recipe_ingredients">Ingredients:</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="fas fa-mortar-pestle prefix"></i>
+                <textarea id="recipe_method" name="recipe_method" minlength="5"
+                        maxlength="1000" class="materialize-textarea validate" required></textarea>
+                <label for="recipe_method">Method:</label>
+            </div>
+        </div>   
+        
+                <div class="input-field col s12">
+                    <div class="switch">
+                        <i class="fas fa-bread-slice prefix"></i>
+                        <label for="is_not_gluten_free">
+                          
+                          <input type="checkbox" id="is_not_gluten_free" name="is_not_gluten_free">
+                          <span class="lever"></span>
+                          Is not gluten free.
+                        </label>
+                    </div>
+                    
+                </div>
+            </div>  
+       
     </form>
 </div>
 
