--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -15,6 +15,18 @@
         </div>
         <div class="row">
             <div class="input-field col s12">
+                <i class="fas fa-check-square prefix"></i>
+                <select>
+                    <option value="" disabled selected>Choose Category</option>
+                    {% for category in categories %}
+                    <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+                    {% endfor %}
+                </select>
+                <label for="category_name">Recipe Category</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
                 <i class="fas fa-clipboard-list prefix"></i>
                 <textarea id="recipe_ingredients" name="recipe_ingredients minlength="5"
                         maxlength="500" class="materialize-textarea validate" required></textarea>
