--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -36,6 +36,7 @@
             <p>{{ recipe.category_name }}</p>
             <p>Ingredients:<i class="fas fa-mortar-pestle"></i> {{ recipe.recipe_ingredients }}</p>
             <p>Method <i class="fas fa-clipboard-list">:</i>{{ recipe.recipe_method }}</p>
+            <p><em>by: {{ recipe.created_by }}</em></p>
           </div>
           <div class="card-action">
     
