--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-check-square prefix"></i>
-                <select>
+                <select id="category_name" name="category_name" class="validate" required>
                     <option value="" disabled selected>Choose Category</option>
                     {% for category in categories %}
                     <option value="{{ category.category_name }}">{{ category.category_name }}</option>
@@ -28,7 +28,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-clipboard-list prefix"></i>
-                <textarea id="recipe_ingredients" name="recipe_ingredients minlength="5"
+                <textarea id="recipe_ingredients" name="recipe_ingredients" minlength="5"
                         maxlength="500" class="materialize-textarea validate" required></textarea>
                 <label for="recipe_ingredients">Ingredients:</label>
             </div>
@@ -37,7 +37,7 @@
             <div class="input-field col s12">
                 <i class="fas fa-mortar-pestle prefix"></i>
                 <textarea id="recipe_method" name="recipe_method" minlength="5"
-                        maxlength="1000" class="materialize-textarea validate" required></textarea>
+                        maxlength="500" class="materialize-textarea validate" required></textarea>
                 <label for="recipe_method">Method:</label>
             </div>
         </div>   
