--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -28,19 +28,25 @@
         <div class="card">
           {% for recipe in recipes %}
           <div class="card-image">
-            <img src="images/scones.jpg">
+            <img src="static/images/scones.jpg">
             <span class="card-title">Card Title</span>
           </div>
           <div class="card-content center-align">
             <h5>{{ recipe.recipe_name }}</h5>
             <p>{{ recipe.category_name }}</p>
             <p>Ingredients:<i class="fas fa-mortar-pestle"></i> {{ recipe.recipe_ingredients }}</p>
-            <p>Method <i class="fas fa-clipboard-list">:</i>{{ recipe.recipe_method }}</p>
+            <p>Method: <i class="fas fa-clipboard-list">:</i>{{ recipe.recipe_method }}</p>
             <p><em>by: {{ recipe.created_by }}</em></p>
+            <div class="col s6">
+              <i class="fas fa-caret-down"></i>
+              <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-small light-blue lighten-1">Edit</a>
           </div>
-          <div class="card-action">
-    
+          <div class="col s6">
+            <i class="fas fa-caret-down"></i>
+            <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-small light-blue lighten-1">Delete</a>
+        </div>
           </div>
+          
           {% endfor %}
         </div>
         
