--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -40,11 +40,11 @@
             <div class="col s6">
               <i class="fas fa-caret-down"></i>
             {% if session.user|lower == recipe.created_by|lower %}
-              <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-small light-blue lighten-1">Edit</a>
-          </div>
-          <div class="col s6">
-            <i class="fas fa-caret-down"></i>
-            <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-small light-blue lighten-1">Delete</a>
+                <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-small light-blue lighten-1">Edit</a>
+              </div>
+              <div class="col s6">
+                <i class="fas fa-caret-down"></i>
+                <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-small light-blue lighten-1">Delete</a>
             {% endif %}
         </div>
           </div>
