--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -3,6 +3,8 @@
 
 <h3 class="center-align black-text">Add Recipe</h3>
 
+<!--Name-->
+
 <div class="row">
     <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
         <div class="row">
@@ -13,6 +15,19 @@
                 <label for="recipe_name">Recipe Name:</label>
             </div>
         </div>
+<!--Description-->
+  
+<div class="row">
+    <div class="input-field col s12">
+        <i class="fas fa-heart prefix"></i>
+        <textarea id="recipe_description" name="recipe_description" minlength="5"
+                maxlength="500" class="materialize-textarea validate" required></textarea>
+        <label for="recipe_description">Description:</label>
+    </div>
+</div>
+
+<!--Category-->
+
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-check-square prefix"></i>
@@ -25,6 +40,19 @@
                 <label for="category_name">Recipe Category</label>
             </div>
         </div>
+<!--Image Url-->
+
+
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="fas fa-camera-retro prefix"></i>
+                <input id="recipe_img" name="recipe_img" maxlength="5000"
+                    type="url" class="validate" aria-describedby="recipe_img" pattern="https?://.+" onchange="recipeImg();">
+                <label for="recipe_img">Recipe Image <em>Copy and paste image url or use our default image by skipping this step</em></label>
+            </div>
+        </div>
+
+<!--Ingredients-->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-clipboard-list prefix"></i>
@@ -33,6 +61,8 @@
                 <label for="recipe_ingredients">Ingredients:</label>
             </div>
         </div>
+
+<!--Method-->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-mortar-pestle prefix"></i>
@@ -41,6 +71,8 @@
                 <label for="recipe_method">Method:</label>
             </div>
         </div>   
+
+<!--Gluten switch-->
         
                 <div class="input-field col s12">
                     <div class="switch">
