--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
                 {% if session.user %}
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
-                    <li><a href="#">Edit Recipe</a></li>
+                    
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                 {% else %}
                     <li><a href="{{ url_for('login') }}">Log In</a></li>
@@ -42,12 +42,12 @@
 
     <!-- mobile sidenav -->
     <ul class="sidenav" id="mobile-demo">
-        <li><h4 class="center-align light-blue-text text-darken 4">Family Recipes</h4></li>
+        <li><h4 class="center-align black-text brand-logo">Family Recipes</h4></li>
         <li><a href="{{ url_for('get_recipes') }}">Home</a></li>
         {% if session.user %}
             <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
             <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
-            <li><a href="#">Edit Recipe</a></li>
+            
             <li><a href="{{ url_for('logout') }}">Log Out</a></li>
         {% else %}
             <li><a href="{{ url_for('login') }}">Log In</a></li>
@@ -61,7 +61,7 @@
         {% if messages %}
             {% for message in messages %}
             <div class="row flashes">
-                <h4 class="red darken-4 center-align">{{ message }}</h4>
+                <h4 class="black darken-4 center-align">{{ message }}</h4>
             </div>
             {% endfor %}
         {% endif %}
