--- a/templates/base.html
+++ b/templates/base.html
@@ -23,14 +23,14 @@
     <!--Main Navbar-->
     <nav class="nav-extended white">
         <div class="nav-wrapper">
-            <a href="{{ url_for('get_recipes') }}" class="brand-logo">Family Recipes</a>
+            <a href="{{ url_for('home') }}" class="brand-logo">Family Recipes</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="{{ url_for('get_recipes') }}">Home</a></li>
+                <li><a href="{{ url_for('home') }}">Home</a></li>
                 {% if session.user %}
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
-                    
+                    <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                 {% else %}
                     <li><a href="{{ url_for('login') }}">Log In</a></li>
@@ -43,11 +43,11 @@
     <!-- mobile sidenav -->
     <ul class="sidenav" id="mobile-demo">
         <li><h4 class="center-align black-text brand-logo">Family Recipes</h4></li>
-        <li><a href="{{ url_for('get_recipes') }}">Home</a></li>
+        <li><a href="{{ url_for('home') }}">Home</a></li>
         {% if session.user %}
             <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
             <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
-            
+            <li><a href="{{ url_for('get_recipes') }}">Recipe</a></li>
             <li><a href="{{ url_for('logout') }}">Log Out</a></li>
         {% else %}
             <li><a href="{{ url_for('login') }}">Log In</a></li>
