--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -5,26 +5,26 @@
 
 <!--Name-->
 
-<div class="row">
-    <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
-        <div class="row">
-            <div class="input-field col s12">
-                <i class="fas fa-file-signature prefix"></i>
-                <input id="recipe_name" name="recipe_name" type="text" class="validate" 
-                    minlength="5" maxlength="50" required>
-                <label for="recipe_name">Recipe Name:</label>
+    <div class="row">
+        <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-file-signature prefix"></i>
+                    <input id="recipe_name" name="recipe_name" type="text" class="validate" minlength="5" maxlength="50"
+                        required>
+                    <label for="recipe_name">Recipe Name:</label>
+                </div>
             </div>
-        </div>
 <!--Description-->
   
-<div class="row">
-    <div class="input-field col s12">
-        <i class="fas fa-heart prefix"></i>
-        <textarea id="recipe_description" name="recipe_description" minlength="5"
-                maxlength="500" class="materialize-textarea validate" required></textarea>
-        <label for="recipe_description">Description:</label>
+    <div class="row">
+        <div class="input-field col s12">
+            <i class="fas fa-heart prefix"></i>
+            <textarea id="recipe_description" name="recipe_description" minlength="5"
+                    maxlength="500" class="materialize-textarea validate" required></textarea>
+            <label for="recipe_description">Description:</label>
+        </div>
     </div>
-</div>
 
 <!--Category-->
 
@@ -57,7 +57,7 @@
             <div class="input-field col s12">
                 <i class="fas fa-clipboard-list prefix"></i>
                 <textarea id="recipe_ingredients" name="recipe_ingredients" minlength="5"
-                        maxlength="500" class="materialize-textarea validate" required></textarea>
+                        maxlength="1500" class="materialize-textarea validate" required></textarea>
                 <label for="recipe_ingredients">Ingredients:</label>
             </div>
         </div>
@@ -67,7 +67,7 @@
             <div class="input-field col s12">
                 <i class="fas fa-mortar-pestle prefix"></i>
                 <textarea id="recipe_method" name="recipe_method" minlength="5"
-                        maxlength="500" class="materialize-textarea validate" required></textarea>
+                        maxlength="5000" class="materialize-textarea validate" required></textarea>
                 <label for="recipe_method">Method:</label>
             </div>
         </div>   
