--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,7 +7,7 @@
         <div class="col s12 m8 offset-m2">
             <div class="card-panel">
                 <h3 class="center-align teal">
-                    {{ username }}'s Profile
+                    {{ recipes.user }}'s Profile
                 </h3>
                 
             </div>
