--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -32,7 +32,7 @@
                                     </div>
                                     <div class="card-action btn-box center-align">
                                         <a class="full-recipe-btn text-shadow"
-                                            href="#">Full Recipe</a>
+                                            href="{{ url_for('full_recipe', recipe_id=recipe._id) }}">Full Recipe</a>
                                     </div>
                                 </div>
                             </div>
