moved delete and edit buttons to full recipe template.

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,18 +2,18 @@
 {% block content %}
 
     
-
-    <div class="row">
-        <div class="col s12 m8 offset-m2">
-            <div class="card-panel">
-                <h3 class="center-align teal">
-                    {{ recipes.user }}'s Profile
-                </h3>
-                
+    <seciton>
+        <div class="row">
+            <div class="col s12 m8 offset-m2">
+                <div class="card-panel">
+                    <h3 class="center-align teal">
+                        Profile
+                    </h3>
+                    
+                </div>
             </div>
         </div>
-    </div>
-
+    </seciton>
     
 
 {% endblock %}
