--- a/templates/full_recipe.html
+++ b/templates/full_recipe.html
@@ -36,6 +36,14 @@
                 <h4>Method</h4>
                 <p>{{ recipe.recipe_method }}</p>
             </div>
+            <div class="col s6">
+                
+                {% if session.user|lower == recipe.created_by|lower %}
+                    <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="center-align waves-effect waves-light btn-large"><i class="far fa-edit"></i> Edit</a>
+                    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="right waves-effect waves-light red btn-large"><i class="far fa-trash-alt"></i> Delete</a>
+                    
+                {% endif %}
+            </div>
         </div>
     </div>
 
