Add search functionality on recipe page. Add static imagesfor landing page and made default image for those who do not attach a Url. Fix gluten free button on full recipe template.

--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
     <section class="recipes">
       <div class="row">
           <div class="col s12 m6 l6 xl4">
-              <div class="card large recipe-card">
+              <div class="card medium recipe-card">
                   <div class="card-image">
                     <img src="static/images/scones.jpg" alt="scones with cream">
                     <span class="card-title"></span>
@@ -42,15 +42,15 @@
                 </div>
               </div>
               <div class="col s12 m6 l6 xl4">
-                <div class="card large recipe-card">
+                <div class="card medium recipe-card">
                     <div class="card-image">
-                      <img src="static/images/scones.jpg" alt="scones with cream">
+                      <img src="static/images/stew-2.jpg" alt="scones with cream">
                       <span class="card-title"></span>
                     </div>
                     <div class="card-content content center-align">
-                      <h5 class="recipe-heading">Nana's Scones</h5>
-                      <p>She would happily tell you that noone made a better scone.</p>
-                      <span><em>By: Anna</em></span>
+                      <h5 class="recipe-heading">Grandad's Stew</h5>
+                      <p>It will keep you warm during the harshest winters.</p>
+                      <span><em>By: Milly</em></span>
                     </div>
                     <div class="card-action btn-box center-align">
                       <a class="full-recipe-btn text-shadow"
@@ -58,6 +58,23 @@
                     </div>
                   </div>
                 </div>
+                <div class="col s12 m6 l6 xl4">
+                  <div class="card medium recipe-card">
+                      <div class="card-image">
+                        <img src="static/images/vic-2.jpg" alt="scones with cream">
+                        <span class="card-title"></span>
+                      </div>
+                      <div class="card-content content center-align">
+                        <h5 class="recipe-heading">Auntie Elie's Victoria Sponge</h5>
+                        <p>She worked as a waitress her whole life and had some of the best recipes. </p>
+                        <span><em>By: Michelle</em></span>
+                      </div>
+                      <div class="card-action btn-box center-align">
+                        <a class="full-recipe-btn text-shadow"
+                            href="{{ url_for('get_recipes') }}">Recipes</a>
+                      </div>
+                    </div>
+                  </div>
             </div>
       </section>
            
