--- a/templates/full_recipe.html
+++ b/templates/full_recipe.html
@@ -33,6 +33,13 @@
                 </ul>
             </div>
             <div class="col s12">
+                <h4 class="teal-text"><strong>Is Gluten Free</strong> : {{ recipe.is_not_gluten_free }}</h4>
+                {% if recipe.is_not_gluten_free == "on" %}
+                    <i class="fas fa-exclamation-circle light-blue-text text-lighten-2 tooltipped"
+                        data-position="right" data-tooltip="URGENT!"></i>
+                {% endif %}
+            </div>
+            <div class="col s12">
                 <h4>Method</h4>
                 <p>{{ recipe.recipe_method }}</p>
             </div>
