--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -13,6 +13,24 @@
               </div>
             </div>
 
+            <div class="row card-panel grey lighten-5">
+                <form action="{{ url_for('search') }}" method="post" class="col s12">
+                    <div class="row valign-wrapper center-align">
+                        <div class="input-field col s12 m8">
+                            <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
+                            <input type="text" name="query" id="query" minlength="3" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                            <label for="query">Search Tasks</label>
+                        </div>
+                        <div class="col s12 m4">
+                            <a href="{{ url_for('get_recipes') }}" class="pink btn text-shadow">Reset</a>
+                            <button type="submit" class="teal darken-1 btn text-shadow">
+                                <i class="fas fa-search left"></i> Search
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
             {% if recipes|length > 0 %}
             <section class="recipes">
                 <div class="row">
@@ -20,7 +38,11 @@
                             <div class="col s12 m6 l6 xl4">
                                 <div class="card large recipe-card">
                                     <div class="card-image">
-                                        <img src="{{ recipe.recipe_img }}" alt="{{ recipe.recipe_name }}">
+                                        {% if recipe.recipe_img %}
+                                            <img src="{{ recipe.recipe_img }}" alt="{{ recipe.recipe_name }}">
+                                        {% else %}
+                                            <img class="responsive-img" alt="Chopping board with flour and cooking utensils." src="static/images/default.jpg">
+                                        {% endif %}
                                         <span class="card-title">{{ recipe.category }}</span>
                                     </div>
                                     <div class="card-content content center-align">
@@ -42,7 +64,7 @@
         {% else %}
             <div class="row no-results-row valign-wrapper">
                 <div class="col s12">
-                    <h3 class="center-align no-results-heading">No Results found <span>🤔</span></h3>
+                    <h3 class="center-align no-results-heading">No Result Found. Perhaps you can add one!<span>🤔</span></h3>
                 </div>
             </div>
         {% endif %}
