fix profile page and add new hero image.

--- a/templates/base.html
+++ b/templates/base.html
@@ -68,41 +68,44 @@
     {% endwith %}
 </section>
 
+{% block content %}
+    {% endblock %}
+
+<footer class="page-footer teal">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Company Bio</h5>
+          <p class="grey-text text-lighten-4">A place to save those precious family recipes.</p>
+        </div>
+        <div class="col l4 offset-l2 s12 m6 center-align">
+            <h5 class="social-heading">Social Links</h5>
+                <div class="social-box">
+                    <a class="social-links" href="https://www.facebook.com/" target="_blank"><i
+                        class="fab fa-facebook"></i></a>
+                    <a class="social-links" href="https://www.instagram.com/" target="_blank"><i
+                        class="fab fa-instagram"></i></a>
+                    <a class="social-links" href="https://twitter.com/?lang=en-gb" target="_blank"><i
+                        class="fab fa-twitter"></i></a>
+                    <a class="social-links" href="https://wechat.com/?lang=en-gb" target="_blank"><i 
+                        class="fab fa-weixin"></i></a>
+                </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                Copyright 2021
+            </div>
+        </div>
+    </footer>
+
     
 
   
 
 
-    {% block content %}
-    {% endblock %}
+    
 
-    <footer class="page-footer teal">
-        <div class="container">
-          <div class="row">
-            <div class="col l6 s12">
-              <h5 class="white-text">Family Recipes</h5>
-              <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
-    
-    
-        </div>
-            
-        <div class="col l4 offset-l2 s12 m6 center-align">
-            <h5 class="social-heading">Social Links</h5>
-            <div class="social-box">
-                <a class="social-links" href="https://www.facebook.com/" target="_blank"><i
-                        class="fab fa-facebook"></i></a>
-                <a class="social-links" href="https://www.instagram.com/" target="_blank"><i
-                        class="fab fa-instagram"></i></a>
-                <a class="social-links" href="https://twitter.com/?lang=en-gb" target="_blank"><i
-                        class="fab fa-twitter"></i></a>
-                <a class="social-links" href="https://wechat.com/?lang=en-gb" target="_blank"><i 
-                        class="fab fa-weixin"></i></a>
-                        
-            </div>
-          </div>
-        
-        
-      </footer>  
+     
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
