--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -7,9 +7,9 @@
         <div class="col s12 m8 offset-m2">
           
             
-                <h3 class="center-align teal">
-                    My Recipes
-                </h3>
+                <h1 class="center-align white black-text">
+                    All Recipes
+                </h1>
               </div>
             </div>
 
