--- a/templates/home.html
+++ b/templates/home.html
@@ -6,9 +6,9 @@
         <div class="section no-pad-bot">
           <div class="container">
             <br><br>
-            <h1 class="header center teal-text text-lighten-2">Family Recipes</h1>
+            <h1 class="header center black-text text-lighten-2">Family Recipes</h1>
             <div class="row center">
-              <h5 class="header col s12 light teal">A place to save those important family recipes. Your recipes can be catalogued and saved for the future, making sure Mamma's chicken soup and grandpa's roast spuds is never lost again.</h5>
+              <h5 class="header col s12 light">A place to save those precious family recipes.</h5>
             </div>
             <div class="row center">
               <a href="{{ url_for('register') }}" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Register</a>
@@ -17,7 +17,7 @@
     
           </div>
         </div>
-        <div class="parallax"><img src="static/images/heroimage.png" alt="illustrated image of people with cooking utensils" style="transform: translate3d(-50%, 199.705px, 0px); opacity: 1;"></div>
+        <div class="parallax"><img class="responsive-img" src="static/images/heroimage-2.png" alt="illustrated image of people with cooking utensils" style="transform: translate3d(-50%, 199.705px, 0px); opacity: 1;"></div>
     </div>
 
     <h3 class="center-align black-text">Recipes</h3>
