--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,18 +2,46 @@
 {% block content %}
 
     
-    <seciton>
+    
+
+
+    
+    
         <div class="row">
             <div class="col s12 m8 offset-m2">
                 <div class="card-panel">
-                    <h3 class="center-align teal">
+                    <h1 class="center-align teal black-text">
                         Profile
-                    </h3>
+                    </h1>
                     
                 </div>
             </div>
         </div>
-    </seciton>
+        <div id="index-banner" class="parallax-container">
+            <div class="section no-pad-bot">
+              <div class="container">
+                <br><br>
+                <h1 class="header center black-text text-lighten-2">Welcome to Family Recipes</h1>
+                <div class="row center">
+                  <h5 class="header col s12 light">A place to save those precious family recipes.</h5>
+                </div>
+                <div class="row center">
+                  
+                </div>
+                <br><br>
+        
+              </div>
+            </div>
+           
+        </div>
     
+
+    
+
+
+
+                    
+                    
+                
 
 {% endblock %}
