--- a/templates/base.html
+++ b/templates/base.html
@@ -71,15 +71,15 @@
 {% block content %}
     {% endblock %}
 
-<footer class="page-footer teal">
+<footer class="page-footer sticky teal">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
+          <h5 class="white-text brand-logo">Family Recipes</h5>
           <p class="grey-text text-lighten-4">A place to save those precious family recipes.</p>
         </div>
-        <div class="col l4 offset-l2 s12 m6 center-align">
-            <h5 class="social-heading">Social Links</h5>
+        <div class="col l4 offset-6 s12 center-align">
+            <h5 class="social-headingt">Social Links</h5>
                 <div class="social-box">
                     <a class="social-links" href="https://www.facebook.com/" target="_blank"><i
                         class="fab fa-facebook"></i></a>
@@ -91,11 +91,7 @@
                         class="fab fa-weixin"></i></a>
                 </div>
         </div>
-        <div class="footer-copyright">
-            <div class="container">
-                Copyright 2021
-            </div>
-        </div>
+        
     </footer>
 
     
