--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
         <div class="parallax"><img class="responsive-img" src="static/images/heroimage-2.png" alt="illustrated image of people with cooking utensils" style="transform: translate3d(-50%, 199.705px, 0px); opacity: 1;"></div>
     </div>
 
-    <h3 class="center-align black-text">Recipes</h3>
+    <h1 class="center-align black-text">Recipes</h1>
 
     <section class="recipes">
       <div class="row">
@@ -36,7 +36,7 @@
                     <span><em>By: Anna</em></span>
                   </div>
                   <div class="card-action btn-box center-align">
-                    <a class="full-recipe-btn text-shadow"
+                    <a class="full-recipe-btn teal-text text-shadow"
                         href="{{ url_for('get_recipes') }}">Recipes</a>
                   </div>
                 </div>
@@ -53,7 +53,7 @@
                       <span><em>By: Milly</em></span>
                     </div>
                     <div class="card-action btn-box center-align">
-                      <a class="full-recipe-btn text-shadow"
+                      <a class="full-recipe-btn teal-text text-shadow"
                           href="{{ url_for('get_recipes') }}">Recipes</a>
                     </div>
                   </div>
@@ -70,7 +70,7 @@
                         <span><em>By: Michelle</em></span>
                       </div>
                       <div class="card-action btn-box center-align">
-                        <a class="full-recipe-btn text-shadow"
+                        <a class="full-recipe-btn teal-text text-shadow"
                             href="{{ url_for('get_recipes') }}">Recipes</a>
                       </div>
                     </div>
