--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,23 +17,22 @@
                 </div>
             </div>
         </div>
-        <div id="index-banner" class="parallax-container">
-            <div class="section no-pad-bot">
-              <div class="container">
-                <br><br>
-                <h1 class="header center black-text text-lighten-2">Welcome to Family Recipes</h1>
+        
+                <h1 class="s12 header center black-text text-lighten-2">Welcome to Family Recipes</h1>
                 <div class="row center">
                   <h5 class="header col s12 light">A place to save those precious family recipes.</h5>
                 </div>
-                <div class="row center">
-                  
+                <div class="row">
+                  <div class="center-align s12">
+                    <a href="{{ url_for('get_recipes') }}" class="center-align waves-effect waves-light btn-large">
+                      <i class="far fa-edit"></i> Recipes</a>
+                  </div>
                 </div>
-                <br><br>
-        
-              </div>
-            </div>
-           
-        </div>
+
+                
+               
+                  
+               
     
 
     
