--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -53,7 +53,7 @@
                                   
                                     </div>
                                     <div class="card-action btn-box center-align">
-                                        <a class="full-recipe-btn text-shadow"
+                                        <a class="full-recipe-btn teal-text text-shadow"
                                             href="{{ url_for('full_recipe', recipe_id=recipe._id) }}">Full Recipe</a>
                                     </div>
                                 </div>
